[gd_scene load_steps=2 format=3 uid="uid://dxrtlv0k45wmj"]

[ext_resource type="Script" path="res://Scenes/end_screen.gd" id="1_6el2s"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_6el2s")

[node name="ResultBigText" type="Label" parent="."]
offset_left = 203.0
offset_top = 124.0
offset_right = 243.0
offset_bottom = 147.0
text = "you died to goblin"

[node name="GoblinKillCount" type="Label" parent="."]
offset_left = 207.0
offset_top = 151.0
offset_right = 346.0
offset_bottom = 174.0
text = "kilt goblin:
"

[node name="HealthLeft" type="Label" parent="."]
offset_left = 207.0
offset_top = 179.0
offset_right = 346.0
offset_bottom = 202.0
text = "heLKRTH
"

[node name="Grade" type="Label" parent="."]
offset_left = 545.0
offset_top = 124.0
offset_right = 684.0
offset_bottom = 173.0
text = "final grade

"

[node name="NameInput" type="TextEdit" parent="."]
visible = false
offset_left = 336.0
offset_top = 287.0
offset_right = 495.0
offset_bottom = 323.0
placeholder_text = "enter name here"

[node name="EnterScore" type="Button" parent="."]
visible = false
offset_left = 510.0
offset_top = 280.0
offset_right = 578.0
offset_bottom = 329.0
text = "entert"

[connection signal="pressed" from="EnterScore" to="." method="_on_enter_score_pressed"]
